# MyCudaUtils

./: Makefile  README.md  fileutils.h  gen_eclipse.sh  gputils.h  mytimer.h  myutils.h  patch_eclipse_nvcc.py  patch_eclipse_nvcc_macro.py  test.cpp  test.cu
src/: CMakeLists.txt  Makefile  fileutils.h  gputils.h  test.cu  utils.h
